--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,13 +5,6 @@
         <span class="title">Play on time</span>
       </a>
     </div>
-    <div class="header-nav">
-      <a href="/players" class="nav-link"
-        ><span class="nav-text">Players</span></a
-      >
-    </div>
   </header>
-  <div class="content-container">
-    <div class="content-area"></div>
-  </div>
+  <router-outlet></router-outlet>
 </div>
