--- a/src/app/main/containers/upload.component.html
+++ b/src/app/main/containers/upload.component.html
@@ -12,6 +12,6 @@
         <app-upload-vacation></app-upload-vacation>
       </div>
     </div>
-    <button (click)="next()" class="btn btn-primary">다음</button>
+    <button routerLink="/result" class="btn btn-primary">다음</button>
   </div>
 </div>
